# PubMed-Insights-Extractor

./: README.md  pyproject.toml
pubmed/: fetcher.py  main.py  utils.py
results/: biotech_AI.csv
webapp/: main.py
webapp/templates/: index.html
